[tool.poetry]
name = "Hangman-Game-MDDude"
version = "1.5.2"
description = ""
authors = ["Manaansh, Amit Mistry <freefire10000a@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"